// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsLayout renders basic header styles properly 1`] = `
@media (min-width: 64em) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .fSIIQD{color:#C000FE!important;}
    .iEGEJu{background-color:#4a402b;}
    .iEGEJu .usa-nav__primary,.iEGEJu .usa-nav__secondary-links{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .iEGEJu a.usa-nav__link{color:#594973;}
    .iEGEJu .usa-nav__secondary-item&gt;a{color:#c8155d;}
    .iEGEJu button.usa-menu-btn{background-color:#cfcd03;}
    .iEGEJu button.usa-menu-btn:hover{background-color:#9d9b02;}
    .fLKlZC .usa-banner__header,.fLKlZC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .fLKlZC .usa-banner__button::after,.fLKlZC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .cGVzcS li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .cGVzcS .usa-current::after,.cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .cGVzcS .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .gZdmXo{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .gZdmXo .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .gZdmXo .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .gZdmXo .result-desc&gt;p{color:#2bd4c7;}
    .gZdmXo .result-desc .result-url-text{color:#475830;}
    .grPaO{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .grPaO .usa-footer__return-to-top&gt;a,.grPaO a.usa-footer__primary-link{color:#46f966;}
    .grPaO .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .gjnkfQ{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .gjnkfQ .usa-identifier__container,.gjnkfQ .usa-identifier__container&gt;a,.gjnkfQ .usa-identifier__identity-disclaimer,.gjnkfQ .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .gjnkfQ .usa-identifier__required-link,.gjnkfQ .usa-identifier__identity-domain{color:#5d5a6f;}
    .gjnkfQ .usa-identifier__required-link:hover,.gjnkfQ .usa-identifier__required-link:active,.gjnkfQ .usa-identifier__required-link:visited{color:#5d5a6f;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders extended header styles properly 1`] = `
@media (max-width: 63.99em) {

}

@media (min-width: 64em) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .fSIIQD{color:#C000FE!important;}
    .hhshoz{background-color:#4a402b;}
    .hhshoz .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .hhshoz .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .hhshoz .usa-nav{background-color:#83df0a;}
    .hhshoz a.usa-nav__link{color:#594973!important;}
    .hhshoz a.usa-nav__link:hover::after{background-color:#594973!important;}
    .hhshoz .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.hhshoz .usa-nav__secondary-item&gt;a{color:#594973;}}
    .hhshoz button.usa-menu-btn{background-color:#cfcd03;}
    .hhshoz button.usa-menu-btn:hover{background-color:#9d9b02;}
    .fLKlZC .usa-banner__header,.fLKlZC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .fLKlZC .usa-banner__button::after,.fLKlZC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .cGVzcS li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .cGVzcS .usa-current::after,.cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .cGVzcS .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .gZdmXo{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .gZdmXo .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .gZdmXo .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .gZdmXo .result-desc&gt;p{color:#2bd4c7;}
    .gZdmXo .result-desc .result-url-text{color:#475830;}
    .grPaO{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .grPaO .usa-footer__return-to-top&gt;a,.grPaO a.usa-footer__primary-link{color:#46f966;}
    .grPaO .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .gjnkfQ{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .gjnkfQ .usa-identifier__container,.gjnkfQ .usa-identifier__container&gt;a,.gjnkfQ .usa-identifier__identity-disclaimer,.gjnkfQ .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .gjnkfQ .usa-identifier__required-link,.gjnkfQ .usa-identifier__identity-domain{color:#5d5a6f;}
    .gjnkfQ .usa-identifier__required-link:hover,.gjnkfQ .usa-identifier__required-link:active,.gjnkfQ .usa-identifier__required-link:visited{color:#5d5a6f;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;

exports[`SearchResultsLayout renders search with results styles properly 1`] = `
@media (max-width: 63.99em) {

}

@media (min-width: 64em) {

}

<head>
  <style
    data-styled="active"
    data-styled-version="6.1.1"
  >
    .fSIIQD{color:#C000FE!important;}
    .hhshoz{background-color:#4a402b;}
    .hhshoz .usa-nav__primary a{font-family:"Public Sans Web"!important;font-weight:bold!important;}
    .hhshoz .usa-nav__secondary{font-family:"Georgia","Cambria","Times New Roman","Times",serif;}
    .hhshoz .usa-nav{background-color:#83df0a;}
    .hhshoz a.usa-nav__link{color:#594973!important;}
    .hhshoz a.usa-nav__link:hover::after{background-color:#594973!important;}
    .hhshoz .usa-nav__secondary-item&gt;a{color:#c8155d;}
    @media (max-width: 63.99em){.hhshoz .usa-nav__secondary-item&gt;a{color:#594973;}}
    .hhshoz button.usa-menu-btn{background-color:#cfcd03;}
    .hhshoz button.usa-menu-btn:hover{background-color:#9d9b02;}
    .fLKlZC .usa-banner__header,.fLKlZC .usa-banner__button-text{background-color:#643617;color:#dacb1b;}
    .fLKlZC .usa-banner__button::after,.fLKlZC .usa-banner__button[aria-expanded=true]:hover::after{background-color:#dacb1b;}
    .cGVzcS li.usa-nav__primary-item:not(li.usa-nav__submenu-item)&gt;a,.cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=false]{color:#aea9f7!important;}
    .cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item .usa-nav__link:hover::after{background-color:#aea9f7!important;}
    .cGVzcS .usa-current::after,.cGVzcS .usa-nav__primary&gt;.usa-nav__primary-item button[aria-expanded=true]{background-color:#aea9f7!important;}
    .cGVzcS .vertical-wrapper .usa-nav__submenu{background-color:#aea9f7!important;}
    .gZdmXo{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;}
    .gZdmXo .result-title-label&gt;.result-title-link{color:#33f0aa;}
    .gZdmXo .result-title-label&gt;.result-title-link:visited{color:#4a97ad;}
    .gZdmXo .result-desc&gt;p{color:#2bd4c7;}
    .gZdmXo .result-desc .result-url-text{color:#475830;}
    .grPaO{font-family:"Helvetica Neue","Helvetica","Roboto","Arial",sans-serif;background-color:#761816;}
    .grPaO .usa-footer__return-to-top&gt;a,.grPaO a.usa-footer__primary-link{color:#46f966;}
    .grPaO .usa-footer .usa-footer__primary-section{background-color:#5fcfc5;}
    .gjnkfQ{background-color:#be1c21;font-family:"Public Sans Web"!important;}
    .gjnkfQ .usa-identifier__container,.gjnkfQ .usa-identifier__container&gt;a,.gjnkfQ .usa-identifier__identity-disclaimer,.gjnkfQ .usa-identifier__identity-disclaimer&gt;a{color:#f48a4c;}
    .gjnkfQ .usa-identifier__required-link,.gjnkfQ .usa-identifier__identity-domain{color:#5d5a6f;}
    .gjnkfQ .usa-identifier__required-link:hover,.gjnkfQ .usa-identifier__required-link:active,.gjnkfQ .usa-identifier__required-link:visited{color:#5d5a6f;}
    @media (min-width: 64em){.usa-header--extended .usa-navbar,.usa-header--extended .usa-nav__inner,.usa-banner__inner{max-width:64rem;}}
    .serp-result-wrapper&gt;.grid-container{max-width:54rem;}
    .serp-result-wrapper{background-color:#761816;}
    .usa-button{background-color:#cfcd03;}
    .usa-button:hover{background-color:#9d9b02;}
  </style>
</head>
`;
